feat: publish mod API 1.2 and creator guides
Changelog: updated
Guide: n/a: creator guidance lives under docs/modding
Known-Discrepancies: n/a: no discrepancy changes
S3K-Known-Discrepancies: n/a: no discrepancy changes
Agent-Docs: updated
Configuration-Docs: n/a: no configuration contract change
Skills: n/a: no skill changes